update to compose chat - fix to stop message from jumping.

--- a/demoAppDev/app/styles/single-chat.less
+++ b/demoAppDev/app/styles/single-chat.less
@@ -46,6 +46,10 @@
                 width: 100%;
                 border: 0;
             }
+
+            &.open {
+                flex: 0;
+            }
         }
 
         .footer-2,
@@ -67,7 +71,7 @@
 
             &.open {
                 display: block;
-                margin-top: -1rem; ///can be better
+                margin-top: 0;
             }
         }
     }
